--- a/profil.html
+++ b/profil.html
@@ -26,7 +26,7 @@
                     <a class="nav-link active" href="profil.html">PROFIL</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">GALERI</a>
+                    <a class="nav-link" href="galeri.html">GALERI</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">KARYA KU</a>
